--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@
 # Note: if you want to stage/commit WP core files
 # you can delete this whole section/until Configuration.
 /wp-admin/
-/wp-content/index.php
-/wp-content/languages
-/wp-content/plugins/index.php
-/wp-content/themes/index.php
+# /wp-content/index.php
+# /wp-content/languages
+# /wp-content/plugins/index.php
+# /wp-content/themes/index.php
 /wp-includes/
 /index.php
 /license.txt
@@ -18,7 +18,7 @@
 /xmlrpc.php
 
 # Configuration
-wp-config.php
+# wp-config.php
 
 # Example themes
 /wp-content/themes/twenty*/
@@ -27,13 +27,13 @@ wp-config.php
 /wp-content/plugins/hello.php
 
 # Uploads
-/wp-content/uploads/
+# /wp-content/uploads/
 
 # Log files
 *.log
 
 # htaccess
-/.htaccess
+# /.htaccess
 
 # All plugins
 #
